add new design for front page

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<title>为了健康，关注宝哥</title>
+<title>云溯科技</title>
 <head>
     <meta charset="utf-8" name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
